--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "waaai",
   "version": "0.4.4",
-  "description": "link shortener for waa.ai",
+  "description": "API and CLI tool for waa.ai",
   "main": "waaai.js",
   "bin": {
     "waaai": "./cli.js"
